# RustMisc

./: .gitignore  README.md
althreat/: Cargo.toml
althreat/src/: main.rs
aoc2022/: README.md
aoc2022/day10/: Cargo.toml
aoc2022/day11/: Cargo.toml
aoc2022/day12/: Cargo.toml
aoc2022/day13/: Cargo.toml
aoc2022/day16/: view_dot.sh
aoc2022/day2/: Cargo.toml
aoc2022/day21/: Cargo.toml
aoc2022/day22/: Cargo.toml
aoc2022/day4/: Cargo.toml
aoc2022/day6/: Cargo.toml
aoc2023/day1/: Cargo.toml
aoc2023/day2/: Cargo.toml
aoc2023/day24/: Cargo.toml
aoc2023/day3/: Cargo.toml
aoc2024/: .gitignore  README.md  benchmark.sh
aoc2024/day1/: Cargo.toml
aoc2024/day10/: Cargo.toml
aoc2024/day11/: Cargo.toml
aoc2024/day12/: Cargo.toml
aoc2024/day13/: Cargo.toml
aoc2024/day14/: Cargo.toml
aoc2024/day15/: Cargo.toml
aoc2024/day16/: Cargo.toml
aoc2024/day17/: Cargo.toml
aoc2024/day18/: Cargo.toml
aoc2024/day19/: Cargo.toml
aoc2024/day20/: Cargo.toml  sample.txt
aoc2024/day21/: Cargo.toml
aoc2024/day22/: Cargo.toml
aoc2024/day23/: Cargo.toml
aoc2024/day24/: Cargo.toml
aoc2024/day25/: Cargo.toml
aoc2024/day3/: Cargo.toml
aoc2024/day4/: Cargo.toml
aoc2024/day5/: Cargo.toml
aoc2024/day6/: Cargo.toml
aoc2024/day7/: Cargo.toml
aoc2024/day8/: Cargo.toml
aoc2024/day9/: Cargo.toml
aoc2025/: README.md
aoc2025/day1/: Cargo.toml
aoc2025/day2/: Cargo.toml
aoc2025/day3/: Cargo.toml
aoc2025/day4/: Cargo.toml  sample_step2.txt  sample_step3.txt  sample_step4.txt
aoc2025/day5/: Cargo.toml
aoc2025/day6/: Cargo.toml
aoc2025/day7/: Cargo.toml
aoc2025/day8/: Cargo.toml
aoc2025/day9/: Cargo.toml  large_sample.txt
bevy/ex1/: Cargo.toml  README.md
bmp/: .gitignore  Cargo.toml  extract_all_headers.sh  sort_crashes.sh
bmp/resources/: README.txt
bmp/src/: bitreader.rs  bmp.rs  main.rs
bmp/tests/: README.txt
evolution/: Cargo.toml  README.md
evolution/src/: animal.rs  dc.rs  graph.rs  grid.rs  main.rs  model.rs  plant.rs  predator.rs  range_iterator.rs  stats.rs
fractal_tree/: Cargo.toml
fractal_tree/src/: branch.rs  dc.rs  leaf.rs  main.rs  point.rs  tree.rs
game_cheater/: Cargo.toml  README.md
game_cheater/src/: capybara_clicker.rs  chrome_dino.rs  idle_monster_slayer.rs  main.rs  options.rs  storm_the_house.rs
game_sheeter/: Cargo.toml  README.md
game_sheeter/src/: main.rs
guess/: Cargo.toml
guess/src/: main.rs
hello_world/: Cargo.toml
hexminesweeper/: Cargo.toml
hexminesweeper/src/: main.rs
hilbert_curve/: Cargo.toml  README.md
hilbert_curve/src/: main.rs
humanshader/: Cargo.toml
humanshader/src/: dc.rs  grid.rs  main.rs
lissajous/: Cargo.toml  links.txt
lissajous/src/: main.rs
minesweeper/src/: main.rs
model/: Cargo.toml
model/src/: lib.rs
model/tests/: factorial_tests.rs
neuralnet_mnist/: .gitignore  Cargo.toml  README.md  model.json
neuralnet_mnist/src/: activation.rs  dc.rs  graph.rs  graph3D.rs  main.rs  mnist.rs  neuralnet.rs  neuron.rs
project_euler/: Cargo.toml
project_euler/src/: fibonacci.rs  main.rs  options.rs  primes.rs  problem1.rs  problem101.rs  problem172.rs  problem197.rs  problem2.rs  problem3.rs  problem4.rs  problem611.rs  problem684.rs  problem686.rs  problem700.rs  problem710.rs  problem718.rs  problem751.rs  problem757.rs  problem78.rs  problem800.rs  problem808.rs  problem816.rs  problem820.rs  problem822.rs  problem853.rs  problem86.rs  problem862.rs  problem872.rs  problem88.rs  problem885.rs  problem918.rs  utils.rs
snake/: Cargo.toml
snake/resources/: licenses.txt
snake/resources/levels/: level1  level2  level3  level4  level5
snake/src/: main.rs
tictactoe/: Cargo.toml  README.md
tictactoe/models/: QL_Black.json  QL_White.json  VI_Black.json  VI_White.json
tictactoe/src/: board.rs  dc.rs  game.rs  human_player.rs  main.rs  player.rs  q_learning_player.rs  random_player.rs  value_iteration_player.rs
triminesweeper/: Cargo.toml
ttf/: Cargo.toml
ttf/src/: main.rs  ttf.rs
(+62 files in other folders)
