[package]
name = "bmp"
version = "0.1.0"
authors = ["Colin Pitrat <colin.pitrat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
nom = "6"
num_enum = "0.5.1"

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["ttf", "image", "gfx"]
