[package]
name = "evolution"
version = "0.1.0"
authors = ["Colin Pitrat <colin.pitrat@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.5.5"
chrono = "0.4.6"
clap = "2.33"
num-derive = "0.2"
num-traits = "0.2"
png = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["ttf", "image", "gfx"]

[profile.release]
# Set to true for profiling with perf or valgrind
debug=false
