[package]
name = "neuralnet_mnist"
version = "0.1.0"
authors = ["Colin Pitrat <colin.pitrat@gmail.com>"]
edition = "2018"

[dev-dependencies]
assert_approx_eq = "1.1.0"
assert_matches = "1.3.0"

[dependencies]
byteorder = "1.3.2"
itertools = "0.8.0"
rand = "0.7.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tempfile = "3.1.0"
typetag = "0.1"
