[package]
name = "snake"
version = "0.1.0"
authors = ["Colin Pitrat <colin.pitrat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
itertools = "0.10"
rand = "0.5.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx", "image", "mixer", "ttf"]
