[package]
name = "tictactoe"
version = "0.1.0"
authors = ["Colin Pitrat <colin.pitrat@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["ttf", "image", "gfx"]
